# EM-torch-extension

./: CMakeLists.txt  README.md  setup.py
em_torch_ext/: TorchExtension.cpp  TorchExtension.h
em_torch_ext/src/: TorchExtension.cpp  TorchExtension.h  TorchExtensionKernel.cu  TorchExtensionKernel.h
